<resources>
    <string name="app_name">Free Kick</string>

    <!-- Login -->
    <string name="tracking">Continue</string>
    <string name="phone_hint" translatable="false">01 xxx xxx xxxx</string>

    <!-- controllers -->

    <string name="txtStarting">Starting Time</string>
    <string name="txtEnding">Ending Time</string>
    <string name="radioButtonIndividual">Solo</string>
    <string name="radioButtonMultiplayer">Multi</string>
    <string name="time">Time</string>
    <string name="price">Price</string>

    <!-- calculate button -->

    <string name="calculate">Calculate</string>
    <string name="timer">Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- calculate toast -->

    <string name="open_time_running">Open time is running</string>
    <string name="open_time_off">Open time is turned off</string>
    <string name="timer_running">Timer is running</string>

    <!-- calculate dialog -->

    <string name="are_you_sure_calculate">Are you sure, you want stop timer and sava data?</string>

    <!-- edit text place holder -->

    <string name="placeHolderText">Enter a time</string>

    <!-- menu -->

    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="controllers">Controllers</string>

    <string name="qr">Qr constructor</string>
    <string name="scanner">Scanner</string>

    <string name="online_history">Online history</string>
    <string name="first_device">First Device</string>
    <string name="second_device">Second Device</string>
    <string name="third_device">Third Device</string>
    <string name="fourth_device">Fourth Device</string>

    <string name="delete">Delete</string>
    <string name="delete_all">Remove all data</string>
    <string name="exit">Exit</string>

    <!-- spinner -->

    <string name="empty">Empty</string>
    <string name="custom">Custom</string>

    <string-array name="spinner_items">
        <item>@string/empty</item>
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>@string/custom</item>
    </string-array>

    <!-- not found error messages -->

    <string name="starting_time_not_found">Please, Enter a starting time</string>
    <string name="ending_input_not_found">Please, Enter a custom time or a custom price</string>

    <!-- ending text error and helper -->

    <string name="invalid_time_format">Please, check for time format</string>
    <string name="time_price_match_helper">Please, long press to handle the</string>


    <!-- HEADERS -->

    <string-array name="headers">
        <item>@string/first_device</item>
        <item>@string/second_device</item>
        <item>@string/third_device</item>
        <item>@string/fourth_device</item>
    </string-array>

    <!-- adding error message -->

    <string name="check_for_data">Please, check for your data and try again</string>

    <!-- history -->

    <string name="empty_history">Empty history</string>

    <!-- error_in_inputs -->

    <string name="error_in_inputs">Please, check your inputs</string>

    <string name="error_in_image">Please, choose an image</string>

    <!-- save -->

    <string name="save_message_when_device_empty">Can not save, please check your inputs</string>

    <!-- notifications -->

    <string name="enable">Enable</string>
    <string name="ask_user_notification_permission">Notifications must be enabled</string>
    <string name="notification_content">The device must be evacuated</string>
    <string name="notification_title">is finished</string>
    <string name="required_to_be_paid">Required to be paid is</string>

    <!-- Scanner -->

    <string name="scan">Scan a QR Code</string>

    <!-- on back press -->

    <string name="tap_again">Tap again to exit app</string>

    <!-- password dialog -->

    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="show_password">Show password</string>
    <string name="remember_me">Remember me</string>
    <string name="submit">Submit</string>
    <string name="use_your_fingerprint">Use your fingerprint</string>
    <string name="free_kick_verify">Free kick needs to verify it\'s you</string>
    <string name="cancel">Cancel</string>

    <!-- customer name -->

    <string name="customer_name">Enter customer name</string>

    <!-- progress dialog -->

    <string name="loading">Loading…</string>

    <!-- internet -->

    <string name="no_internet">No internet connection</string>
    <string name="internet_limited">Internet connection limited</string>
    <string name="data_uploaded">Data uploaded</string>
    <string name="data_download">Downloaded successfully</string>

    <!-- revenue -->

    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string name="devices">Devices</string>
    <string name="device_number">Device number</string>

    <string name="done">Your password not remembered now</string>
    <string name="forget_me">Forget me</string>

    <!-- saved -->

    <string name="saved">Saved</string>


    <!-- controllers -->

    <string name="ps4_controller_dpad_up">Up</string>
    <string name="ps4_controller_dpad_down">Down</string>
    <string name="ps4_controller_dpad_left">Left</string>
    <string name="ps4_controller_dpad_right">Right</string>

    <string name="ps4_controller_button_circle">Circle</string>
    <string name="ps4_controller_button_square">Square</string>
    <string name="ps4_controller_button_triangle">Triangle</string>
    <string name="ps4_controller_button_cross">Cross</string>

    <string name="ps4_controller_button_l1">L1</string>
    <string name="ps4_controller_button_l2">L2</string>
    <string name="ps4_controller_button_r1">R1</string>
    <string name="ps4_controller_button_r2">R2</string>

    <string name="ps4_controller_button_share">Share</string>
    <string name="ps4_controller_button_options">Options</string>
    <string name="ps4_controller_button_ps">PS</string>
    <string name="ps4_controller_button_touchpad">Touchpad</string>

    <string name="enter_the_problem">Enter the problem</string>

    <string name="buttons">Buttons</string>
    <string name="outside">From out</string>
    <string name="inside">From in</string>

    <string name="external_parts">External parts</string>
    <string name="internal_parts">Internal parts</string>

    <string name="body">Body</string>

    <string name="analogs">Analogs</string>

    <string name="right_analog">Right analog</string>
    <string name="left_analog">Left analog</string>

    <string name="stocks">Stock control unit</string>
    <string name="play_pad">Button control unit</string>
    <string name="up_buttons">R and L buttons</string>
    <string name="other_buttons">Other buttons</string>
    <string name="socket">Socket</string>
    <string name="battery">Battery</string>
    <string name="motherboard">Motherboard</string>
    <string name="inner_cable">Inner cable</string>
    <string name="tap_cable">Tap cable</string>

    <string name="error_placeholder">Please, Enter your problem</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <!-- Controllers -->

    <string name="report">Make a report</string>
    <string name="controller_no">Controller no.</string>

    <string name="good">Good</string>
    <string name="bad">Bad</string>

    <!-- Debt -->
    <string name="add_new">Add a new user</string>
    <string name="sort">Sort data</string>
    <string name="add_new_customer">Add new one</string>
    <string name="search">Search</string>

    <!-- user view -->
    <string name="data_not_found">No data found</string>

    <!-- bottom navigation bar -->

    <string name="home">Home</string>
    <string name="Debt">Debt</string>
    <string name="Account">My account</string>
    <string name="More">More</string>


    <!-- login -->
    <string name="login">Login</string>
    <string name="mobile">Mobile No.</string>
    <string name="invalid_phone_no">Please, Enter a valid phone number</string>
    <string name="invalid_country_code">Please, Choose a valid country code</string>

    <!-- code verification -->
    <string name="otp">OTP</string>
    <string name="verification_code">Verification code</string>
    <string name="verification_text">We have sent the code verification</string>

    <!-- shop id -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="shop_id">Shop ID</string>
    <string name="enter_new_name">Enter a new name</string>

    <!-- debt -->
    <string name="debtor_name">Customer name</string>
    <string name="value_of_debt">Enter the value of the debt</string>
    <string name="delete_account">Delete account</string>
    <string name="for_him">For him</string>
    <string name="for_you">For you</string>
    <string name="user_exist">This user already exist</string>

    <!-- are you sure dialog -->
    <string name="are_you_sure_delete">Are you sure, you want delete data?</string>
    <string name="are_you_sure_logout">Are you sure, you want logout?</string>
    <string name="are_you_sure_save">Are you sure, you want save data?</string>
    <string name="are_you_sure_add">Are you sure, you want add a new time?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- change password -->
    <string name="change_password">Change password</string>
    <string name="password_confirmation">Are you sure want </string>
    <string name="password_confirmation_1">password for your account?</string>

    <!-- account -->
    <string name="logout">Logout</string>
    <string name="phone_number">Phone</string>
</resources>