<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/starting_time_layout"
                style="@style/general_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/starting_time_text"
                    style="@style/text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtStarting"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ending_time_layout"
                style="@style/general_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ending_time_text"
                    style="@style/text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtEnding"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/delete"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:contentDescription="@string/app_name"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/delete_icon"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/add"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:contentDescription="@string/app_name"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/plus_icon"
                tools:ignore="ImageContrastCheck" />

            <RadioGroup
                android:id="@+id/radio_button_group"
                style="@style/radioButtonGroupStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/solo"
                    style="@style/radioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonIndividual" />

                <RadioButton
                    android:id="@+id/multi"
                    style="@style/radioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:text="@string/radioButtonMultiplayer" />
            </RadioGroup>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/history"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/history_icon"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/time"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <ImageButton
                android:id="@+id/save"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/save_icon"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/payment"
                style="@style/checkBoxStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:ignore="VisualLintOverlap" />

            <TextView
                android:id="@+id/price"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price" />
        </FrameLayout>

        <Button
            android:id="@+id/calculate"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>