<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog_sheet"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/remove"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/round_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/input_filed">

        <EditText
            android:id="@+id/password_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/components_height"
            android:background="@null"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/show_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginVertical="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:background="@drawable/password"
            android:button="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:button="@drawable/checkbox"
        android:paddingHorizontal="@dimen/padding"
        android:text="@string/remember_me"
        android:textSize="@dimen/text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/components_height"
        android:layout_marginVertical="@dimen/margin"
        android:background="@drawable/button_ripple_effect"
        android:gravity="center"
        android:shadowColor="@color/dim_gray"
        android:text="@string/submit"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />
</LinearLayout>